// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GaitTrendsPanel snapshots > momentum borderline stable vs upward snapshots 1`] = `
<div>
  <div
    class="border-gray-200/60 backdrop-blur rounded-lg border bg-white/70 p-4 shadow-sm "
  >
    <div
      class="mb-2 flex items-center justify-between gap-2"
    >
      <h3
        class="text-gray-800 flex items-center gap-2 text-sm font-semibold"
      >
        Gait Trends
        <span
          class="py-0.5 rounded bg-gradient-to-r px-2 text-[10px] from-slate-400/30 to-slate-500/30 text-slate-700"
          title="Momentum score 0.33 (Stable)"
        >
          Stable
        </span>
      </h3>
      <div
        class="ml-auto flex items-center gap-2"
      >
        <button
          class="border-gray-300 py-0.5 text-gray-600 hover:bg-gray-50 rounded border bg-white px-2 text-[10px]"
          title="Showing relative slope magnitude (toggle to view absolute slope)"
          type="button"
        >
          Rel
        </button>
      </div>
    </div>
    <div
      class="flex flex-col divide-y divide-gray-100/60"
    >
      <div
        class="border-gray-200/40 flex flex-col border-b py-1 last:border-none"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="gap-0.5 flex flex-col"
          >
            <span
              class="text-xs text-gray-700 font-medium"
            >
              speed
            </span>
            <span
              class="text-[10px] text-gray-500"
            >
              samples: 
              10
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <span
              class="py-0.5 rounded-full border px-2 text-[11px] bg-emerald-600/15 text-emerald-600 border-emerald-600/30"
              title="improving"
            >
              improving
            </span>
            <span
              class="py-0.5 rounded-full px-2 text-[10px] font-medium transition bg-emerald-400/30 text-emerald-700 "
              title="mild improvement | slope=1.000e-3 | rel=0.0500 | conf=90.0%"
            >
              mild improvement
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              rel: 
              0.050
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              conf: 
              90
              %
            </span>
          </div>
        </div>
        <div
          class="mt-0.5 text-gray-600 line-clamp-2 text-[10px]"
        >
          Sustain pace improvements with consistent cadence drills
        </div>
      </div>
      <div
        class="border-gray-200/40 flex flex-col border-b py-1 last:border-none"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="gap-0.5 flex flex-col"
          >
            <span
              class="text-xs text-gray-700 font-medium"
            >
              cadence
            </span>
            <span
              class="text-[10px] text-gray-500"
            >
              samples: 
              10
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <span
              class="py-0.5 rounded-full border px-2 text-[11px] bg-slate-500/15 text-slate-500 border-slate-500/30"
              title="stable"
            >
              stable
            </span>
            <span
              class="py-0.5 rounded-full px-2 text-[10px] font-medium transition bg-slate-500/15 text-slate-600 "
              title="stable | slope=0.000e+0 | rel=0.0500 | conf=90.0%"
            >
              stable
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              rel: 
              0.050
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              conf: 
              90
              %
            </span>
          </div>
        </div>
        <div
          class="mt-0.5 text-gray-600 line-clamp-2 text-[10px]"
        >
          Maintain current routine
        </div>
      </div>
      <div
        class="border-gray-200/40 flex flex-col border-b py-1 last:border-none"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="gap-0.5 flex flex-col"
          >
            <span
              class="text-xs text-gray-700 font-medium"
            >
              variability
            </span>
            <span
              class="text-[10px] text-gray-500"
            >
              samples: 
              10
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <span
              class="py-0.5 rounded-full border px-2 text-[11px] bg-slate-500/15 text-slate-500 border-slate-500/30"
              title="stable"
            >
              stable
            </span>
            <span
              class="py-0.5 rounded-full px-2 text-[10px] font-medium transition bg-slate-500/15 text-slate-600 "
              title="stable | slope=0.000e+0 | rel=0.0500 | conf=90.0%"
            >
              stable
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              rel: 
              0.050
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              conf: 
              90
              %
            </span>
          </div>
        </div>
        <div
          class="mt-0.5 text-gray-600 line-clamp-2 text-[10px]"
        >
          Maintain current routine
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GaitTrendsPanel snapshots > momentum borderline stable vs upward snapshots 2`] = `
<div>
  <div
    class="border-gray-200/60 backdrop-blur rounded-lg border bg-white/70 p-4 shadow-sm "
  >
    <div
      class="mb-2 flex items-center justify-between gap-2"
    >
      <h3
        class="text-gray-800 flex items-center gap-2 text-sm font-semibold"
      >
        Gait Trends
        <span
          class="py-0.5 rounded bg-gradient-to-r px-2 text-[10px] from-emerald-500/80 to-emerald-600/80 text-white"
          title="Momentum score 0.94 (Upward)"
        >
          Upward
        </span>
      </h3>
      <div
        class="ml-auto flex items-center gap-2"
      >
        <button
          class="border-gray-300 py-0.5 text-gray-600 hover:bg-gray-50 rounded border bg-white px-2 text-[10px]"
          title="Showing relative slope magnitude (toggle to view absolute slope)"
          type="button"
        >
          Rel
        </button>
      </div>
    </div>
    <div
      class="flex flex-col divide-y divide-gray-100/60"
    >
      <div
        class="border-gray-200/40 flex flex-col border-b py-1 last:border-none"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="gap-0.5 flex flex-col"
          >
            <span
              class="text-xs text-gray-700 font-medium"
            >
              speed
            </span>
            <span
              class="text-[10px] text-gray-500"
            >
              samples: 
              10
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <span
              class="py-0.5 rounded-full border px-2 text-[11px] bg-emerald-600/15 text-emerald-600 border-emerald-600/30"
              title="improving"
            >
              improving
            </span>
            <span
              class="py-0.5 rounded-full px-2 text-[10px] font-medium transition bg-emerald-400/30 text-emerald-700 "
              title="mild improvement | slope=1.000e-3 | rel=0.0500 | conf=90.0%"
            >
              mild improvement
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              rel: 
              0.050
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              conf: 
              90
              %
            </span>
          </div>
        </div>
        <div
          class="mt-0.5 text-gray-600 line-clamp-2 text-[10px]"
        >
          Sustain pace improvements with consistent cadence drills
        </div>
      </div>
      <div
        class="border-gray-200/40 flex flex-col border-b py-1 last:border-none"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="gap-0.5 flex flex-col"
          >
            <span
              class="text-xs text-gray-700 font-medium"
            >
              cadence
            </span>
            <span
              class="text-[10px] text-gray-500"
            >
              samples: 
              10
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <span
              class="py-0.5 rounded-full border px-2 text-[11px] bg-slate-500/15 text-slate-500 border-slate-500/30"
              title="stable"
            >
              stable
            </span>
            <span
              class="py-0.5 rounded-full px-2 text-[10px] font-medium transition bg-slate-500/15 text-slate-600 opacity-50"
              title="stable | slope=0.000e+0 | rel=0.0050 | conf=30.0% (low confidence)"
            >
              stable
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              rel: 
              0.005
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              conf: 
              30
              %
            </span>
          </div>
        </div>
        <div
          class="mt-0.5 text-gray-600 line-clamp-2 text-[10px]"
        >
          Maintain current routine
        </div>
      </div>
      <div
        class="border-gray-200/40 flex flex-col border-b py-1 last:border-none"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="gap-0.5 flex flex-col"
          >
            <span
              class="text-xs text-gray-700 font-medium"
            >
              variability
            </span>
            <span
              class="text-[10px] text-gray-500"
            >
              samples: 
              10
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <span
              class="py-0.5 rounded-full border px-2 text-[11px] bg-slate-500/15 text-slate-500 border-slate-500/30"
              title="stable"
            >
              stable
            </span>
            <span
              class="py-0.5 rounded-full px-2 text-[10px] font-medium transition bg-slate-500/15 text-slate-600 opacity-50"
              title="stable | slope=0.000e+0 | rel=0.0050 | conf=30.0% (low confidence)"
            >
              stable
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              rel: 
              0.005
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              conf: 
              30
              %
            </span>
          </div>
        </div>
        <div
          class="mt-0.5 text-gray-600 line-clamp-2 text-[10px]"
        >
          Maintain current routine
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GaitTrendsPanel snapshots > momentum borderline stable vs upward snapshots 3`] = `
<div>
  <div
    class="border-gray-200/60 backdrop-blur rounded-lg border bg-white/70 p-4 shadow-sm "
  >
    <div
      class="mb-2 flex items-center justify-between gap-2"
    >
      <h3
        class="text-gray-800 flex items-center gap-2 text-sm font-semibold"
      >
        Gait Trends
        <span
          class="py-0.5 rounded bg-gradient-to-r px-2 text-[10px] from-slate-400/30 to-slate-500/30 text-slate-700"
          title="Momentum score 0.33 (Stable)"
        >
          Stable
        </span>
      </h3>
      <div
        class="ml-auto flex items-center gap-2"
      >
        <button
          class="border-gray-300 py-0.5 text-gray-600 hover:bg-gray-50 rounded border bg-white px-2 text-[10px]"
          title="Showing relative slope magnitude (toggle to view absolute slope)"
          type="button"
        >
          Rel
        </button>
      </div>
    </div>
    <div
      class="flex flex-col divide-y divide-gray-100/60"
    >
      <div
        class="border-gray-200/40 flex flex-col border-b py-1 last:border-none"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="gap-0.5 flex flex-col"
          >
            <span
              class="text-xs text-gray-700 font-medium"
            >
              speed
            </span>
            <span
              class="text-[10px] text-gray-500"
            >
              samples: 
              10
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <span
              class="py-0.5 rounded-full border px-2 text-[11px] bg-emerald-600/15 text-emerald-600 border-emerald-600/30"
              title="improving"
            >
              improving
            </span>
            <span
              class="py-0.5 rounded-full px-2 text-[10px] font-medium transition bg-emerald-400/30 text-emerald-700 "
              title="mild improvement | slope=1.000e-3 | rel=0.0500 | conf=90.0%"
            >
              mild improvement
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              rel: 
              0.050
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              conf: 
              90
              %
            </span>
          </div>
        </div>
        <div
          class="mt-0.5 text-gray-600 line-clamp-2 text-[10px]"
        >
          Sustain pace improvements with consistent cadence drills
        </div>
      </div>
      <div
        class="border-gray-200/40 flex flex-col border-b py-1 last:border-none"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="gap-0.5 flex flex-col"
          >
            <span
              class="text-xs text-gray-700 font-medium"
            >
              cadence
            </span>
            <span
              class="text-[10px] text-gray-500"
            >
              samples: 
              10
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <span
              class="py-0.5 rounded-full border px-2 text-[11px] bg-slate-500/15 text-slate-500 border-slate-500/30"
              title="stable"
            >
              stable
            </span>
            <span
              class="py-0.5 rounded-full px-2 text-[10px] font-medium transition bg-slate-500/15 text-slate-600 "
              title="stable | slope=0.000e+0 | rel=0.0500 | conf=90.0%"
            >
              stable
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              rel: 
              0.050
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              conf: 
              90
              %
            </span>
          </div>
        </div>
        <div
          class="mt-0.5 text-gray-600 line-clamp-2 text-[10px]"
        >
          Maintain current routine
        </div>
      </div>
      <div
        class="border-gray-200/40 flex flex-col border-b py-1 last:border-none"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="gap-0.5 flex flex-col"
          >
            <span
              class="text-xs text-gray-700 font-medium"
            >
              variability
            </span>
            <span
              class="text-[10px] text-gray-500"
            >
              samples: 
              10
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <span
              class="py-0.5 rounded-full border px-2 text-[11px] bg-slate-500/15 text-slate-500 border-slate-500/30"
              title="stable"
            >
              stable
            </span>
            <span
              class="py-0.5 rounded-full px-2 text-[10px] font-medium transition bg-slate-500/15 text-slate-600 "
              title="stable | slope=0.000e+0 | rel=0.0500 | conf=90.0%"
            >
              stable
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              rel: 
              0.050
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              conf: 
              90
              %
            </span>
          </div>
        </div>
        <div
          class="mt-0.5 text-gray-600 line-clamp-2 text-[10px]"
        >
          Maintain current routine
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GaitTrendsPanel snapshots > renders absolute slope view after toggle click 1`] = `
<div>
  <div
    class="border-gray-200/60 backdrop-blur rounded-lg border bg-white/70 p-4 shadow-sm "
  >
    <div
      class="mb-2 flex items-center justify-between gap-2"
    >
      <h3
        class="text-gray-800 flex items-center gap-2 text-sm font-semibold"
      >
        Gait Trends
        <span
          class="py-0.5 rounded bg-gradient-to-r px-2 text-[10px] from-emerald-500/80 to-emerald-600/80 text-white"
          title="Momentum score 2.34 (Upward)"
        >
          Upward
        </span>
      </h3>
      <div
        class="ml-auto flex items-center gap-2"
      >
        <button
          class="border-gray-300 py-0.5 text-gray-600 hover:bg-gray-50 rounded border bg-white px-2 text-[10px]"
          title="Showing absolute slope (toggle to view relative normalized magnitude)"
          type="button"
        >
          Abs
        </button>
      </div>
    </div>
    <div
      class="flex flex-col divide-y divide-gray-100/60"
    >
      <div
        class="border-gray-200/40 flex flex-col border-b py-1 last:border-none"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="gap-0.5 flex flex-col"
          >
            <span
              class="text-xs text-gray-700 font-medium"
            >
              speed
            </span>
            <span
              class="text-[10px] text-gray-500"
            >
              samples: 
              18
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <span
              class="py-0.5 rounded-full border px-2 text-[11px] bg-emerald-600/15 text-emerald-600 border-emerald-600/30"
              title="improving"
            >
              improving
            </span>
            <span
              class="py-0.5 rounded-full px-2 text-[10px] font-medium transition bg-emerald-600 text-white "
              title="strong improvement | slope=1.235e-2 | rel=0.0456 | conf=92.0%"
            >
              strong improvement
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              slope: 
              0.0123
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              conf: 
              92
              %
            </span>
          </div>
        </div>
        <div
          class="mt-0.5 text-gray-600 line-clamp-2 text-[10px]"
        >
          Sustain pace improvements with consistent cadence drills
        </div>
      </div>
      <div
        class="border-gray-200/40 flex flex-col border-b py-1 last:border-none"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="gap-0.5 flex flex-col"
          >
            <span
              class="text-xs text-gray-700 font-medium"
            >
              cadence
            </span>
            <span
              class="text-[10px] text-gray-500"
            >
              samples: 
              18
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <span
              class="py-0.5 rounded-full border px-2 text-[11px] bg-emerald-600/15 text-emerald-600 border-emerald-600/30"
              title="improving"
            >
              improving
            </span>
            <span
              class="py-0.5 rounded-full px-2 text-[10px] font-medium transition bg-emerald-500/90 text-white "
              title="moderate improvement | slope=8.800e-3 | rel=0.0321 | conf=81.0%"
            >
              moderate improvement
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              slope: 
              0.0088
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              conf: 
              81
              %
            </span>
          </div>
        </div>
        <div
          class="mt-0.5 text-gray-600 line-clamp-2 text-[10px]"
        >
          Leverage metronome steps to reinforce cadence gains
        </div>
      </div>
      <div
        class="border-gray-200/40 flex flex-col border-b py-1 last:border-none"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="gap-0.5 flex flex-col"
          >
            <span
              class="text-xs text-gray-700 font-medium"
            >
              asymmetry
            </span>
            <span
              class="text-[10px] text-gray-500"
            >
              samples: 
              18
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <span
              class="py-0.5 rounded-full border px-2 text-[11px] bg-emerald-600/15 text-emerald-600 border-emerald-600/30"
              title="improving"
            >
              improving
            </span>
            <span
              class="py-0.5 rounded-full px-2 text-[10px] font-medium transition bg-emerald-400/30 text-emerald-700 "
              title="mild improvement | slope=-1.200e-3 | rel=0.0140 | conf=74.0%"
            >
              mild improvement
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              slope: 
              -0.0012
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              conf: 
              74
              %
            </span>
          </div>
        </div>
        <div
          class="mt-0.5 text-gray-600 line-clamp-2 text-[10px]"
        >
          Great symmetry gains—add light single-leg balance to lock in
        </div>
      </div>
      <div
        class="border-gray-200/40 flex flex-col border-b py-1 last:border-none"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="gap-0.5 flex flex-col"
          >
            <span
              class="text-xs text-gray-700 font-medium"
            >
              variability
            </span>
            <span
              class="text-[10px] text-gray-500"
            >
              samples: 
              18
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <span
              class="py-0.5 rounded-full border px-2 text-[11px] bg-slate-500/15 text-slate-500 border-slate-500/30"
              title="stable"
            >
              stable
            </span>
            <span
              class="py-0.5 rounded-full px-2 text-[10px] font-medium transition bg-slate-500/15 text-slate-600 "
              title="stable | slope=0.000e+0 | rel=0.0040 | conf=55.0%"
            >
              stable
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              slope: 
              0.0000
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              conf: 
              55
              %
            </span>
          </div>
        </div>
        <div
          class="mt-0.5 text-gray-600 line-clamp-2 text-[10px]"
        >
          Maintain current routine
        </div>
      </div>
    </div>
    <div
      class="mt-3 grid grid-cols-2 gap-2"
    >
      <div
        class="bg-gray-50 rounded-md p-2"
      >
        <p
          class="text-[10px] text-gray-500"
        >
          Speed Avg
        </p>
        <p
          class="text-xs font-medium tabular-nums"
        >
          1.235
        </p>
      </div>
      <div
        class="bg-gray-50 rounded-md p-2"
      >
        <p
          class="text-[10px] text-gray-500"
        >
          Cadence Avg
        </p>
        <p
          class="text-xs font-medium tabular-nums"
        >
          102.4
        </p>
      </div>
      <div
        class="bg-gray-50 rounded-md p-2"
      >
        <p
          class="text-[10px] text-gray-500"
        >
          Asym Avg
        </p>
        <p
          class="text-xs font-medium tabular-nums"
        >
          0.035
        </p>
      </div>
      <div
        class="bg-gray-50 rounded-md p-2"
      >
        <p
          class="text-[10px] text-gray-500"
        >
          Variability Avg
        </p>
        <p
          class="text-xs font-medium tabular-nums"
        >
          0.057
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`GaitTrendsPanel snapshots > renders empty state (no trend data) 1`] = `
<div>
  <div
    class="border-gray-200/60 backdrop-blur rounded-lg border bg-white/70 p-4 shadow-sm "
  >
    <div
      class="mb-2 flex items-center justify-between gap-2"
    >
      <h3
        class="text-gray-800 flex items-center gap-2 text-sm font-semibold"
      >
        Gait Trends
      </h3>
      <div
        class="ml-auto flex items-center gap-2"
      >
        <button
          class="border-gray-300 py-0.5 text-gray-600 hover:bg-gray-50 rounded border bg-white px-2 text-[10px]"
          title="Showing relative slope magnitude (toggle to view absolute slope)"
          type="button"
        >
          Rel
        </button>
      </div>
    </div>
    <p
      class="text-xs text-gray-500"
    >
      No trend data yet.
    </p>
  </div>
</div>
`;

exports[`GaitTrendsPanel snapshots > renders populated multi-metric trends (relative view default) consistently 1`] = `
<div>
  <div
    class="border-gray-200/60 backdrop-blur rounded-lg border bg-white/70 p-4 shadow-sm "
  >
    <div
      class="mb-2 flex items-center justify-between gap-2"
    >
      <h3
        class="text-gray-800 flex items-center gap-2 text-sm font-semibold"
      >
        Gait Trends
        <span
          class="py-0.5 rounded bg-gradient-to-r px-2 text-[10px] from-emerald-500/80 to-emerald-600/80 text-white"
          title="Momentum score 2.34 (Upward)"
        >
          Upward
        </span>
      </h3>
      <div
        class="ml-auto flex items-center gap-2"
      >
        <button
          class="border-gray-300 py-0.5 text-gray-600 hover:bg-gray-50 rounded border bg-white px-2 text-[10px]"
          title="Showing relative slope magnitude (toggle to view absolute slope)"
          type="button"
        >
          Rel
        </button>
      </div>
    </div>
    <div
      class="flex flex-col divide-y divide-gray-100/60"
    >
      <div
        class="border-gray-200/40 flex flex-col border-b py-1 last:border-none"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="gap-0.5 flex flex-col"
          >
            <span
              class="text-xs text-gray-700 font-medium"
            >
              speed
            </span>
            <span
              class="text-[10px] text-gray-500"
            >
              samples: 
              18
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <span
              class="py-0.5 rounded-full border px-2 text-[11px] bg-emerald-600/15 text-emerald-600 border-emerald-600/30"
              title="improving"
            >
              improving
            </span>
            <span
              class="py-0.5 rounded-full px-2 text-[10px] font-medium transition bg-emerald-600 text-white "
              title="strong improvement | slope=1.235e-2 | rel=0.0456 | conf=92.0%"
            >
              strong improvement
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              rel: 
              0.046
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              conf: 
              92
              %
            </span>
          </div>
        </div>
        <div
          class="mt-0.5 text-gray-600 line-clamp-2 text-[10px]"
        >
          Sustain pace improvements with consistent cadence drills
        </div>
      </div>
      <div
        class="border-gray-200/40 flex flex-col border-b py-1 last:border-none"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="gap-0.5 flex flex-col"
          >
            <span
              class="text-xs text-gray-700 font-medium"
            >
              cadence
            </span>
            <span
              class="text-[10px] text-gray-500"
            >
              samples: 
              18
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <span
              class="py-0.5 rounded-full border px-2 text-[11px] bg-emerald-600/15 text-emerald-600 border-emerald-600/30"
              title="improving"
            >
              improving
            </span>
            <span
              class="py-0.5 rounded-full px-2 text-[10px] font-medium transition bg-emerald-500/90 text-white "
              title="moderate improvement | slope=8.800e-3 | rel=0.0321 | conf=81.0%"
            >
              moderate improvement
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              rel: 
              0.032
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              conf: 
              81
              %
            </span>
          </div>
        </div>
        <div
          class="mt-0.5 text-gray-600 line-clamp-2 text-[10px]"
        >
          Leverage metronome steps to reinforce cadence gains
        </div>
      </div>
      <div
        class="border-gray-200/40 flex flex-col border-b py-1 last:border-none"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="gap-0.5 flex flex-col"
          >
            <span
              class="text-xs text-gray-700 font-medium"
            >
              asymmetry
            </span>
            <span
              class="text-[10px] text-gray-500"
            >
              samples: 
              18
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <span
              class="py-0.5 rounded-full border px-2 text-[11px] bg-emerald-600/15 text-emerald-600 border-emerald-600/30"
              title="improving"
            >
              improving
            </span>
            <span
              class="py-0.5 rounded-full px-2 text-[10px] font-medium transition bg-emerald-400/30 text-emerald-700 "
              title="mild improvement | slope=-1.200e-3 | rel=0.0140 | conf=74.0%"
            >
              mild improvement
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              rel: 
              0.014
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              conf: 
              74
              %
            </span>
          </div>
        </div>
        <div
          class="mt-0.5 text-gray-600 line-clamp-2 text-[10px]"
        >
          Great symmetry gains—add light single-leg balance to lock in
        </div>
      </div>
      <div
        class="border-gray-200/40 flex flex-col border-b py-1 last:border-none"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="gap-0.5 flex flex-col"
          >
            <span
              class="text-xs text-gray-700 font-medium"
            >
              variability
            </span>
            <span
              class="text-[10px] text-gray-500"
            >
              samples: 
              18
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <span
              class="py-0.5 rounded-full border px-2 text-[11px] bg-slate-500/15 text-slate-500 border-slate-500/30"
              title="stable"
            >
              stable
            </span>
            <span
              class="py-0.5 rounded-full px-2 text-[10px] font-medium transition bg-slate-500/15 text-slate-600 "
              title="stable | slope=0.000e+0 | rel=0.0040 | conf=55.0%"
            >
              stable
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              rel: 
              0.004
            </span>
            <span
              class="text-gray-600 text-[10px] tabular-nums"
            >
              conf: 
              55
              %
            </span>
          </div>
        </div>
        <div
          class="mt-0.5 text-gray-600 line-clamp-2 text-[10px]"
        >
          Maintain current routine
        </div>
      </div>
    </div>
    <div
      class="mt-3 grid grid-cols-2 gap-2"
    >
      <div
        class="bg-gray-50 rounded-md p-2"
      >
        <p
          class="text-[10px] text-gray-500"
        >
          Speed Avg
        </p>
        <p
          class="text-xs font-medium tabular-nums"
        >
          1.235
        </p>
      </div>
      <div
        class="bg-gray-50 rounded-md p-2"
      >
        <p
          class="text-[10px] text-gray-500"
        >
          Cadence Avg
        </p>
        <p
          class="text-xs font-medium tabular-nums"
        >
          102.4
        </p>
      </div>
      <div
        class="bg-gray-50 rounded-md p-2"
      >
        <p
          class="text-[10px] text-gray-500"
        >
          Asym Avg
        </p>
        <p
          class="text-xs font-medium tabular-nums"
        >
          0.035
        </p>
      </div>
      <div
        class="bg-gray-50 rounded-md p-2"
      >
        <p
          class="text-[10px] text-gray-500"
        >
          Variability Avg
        </p>
        <p
          class="text-xs font-medium tabular-nums"
        >
          0.057
        </p>
      </div>
    </div>
  </div>
</div>
`;
